<resources>
    <string name="app_name">WhyNot</string>
    <string name="firebaseID">AAAA8K6g49g:APA91bGHaaI_zphN6lm_sqVkUVtx5xG4iYvCLwGiM-bboH5xkluU3pUUF3a7V3CWfbtPuD4gau0Lh_xuIAaC_w-tmA_cquuAii7CWc6Iwc7x3h8Y2-RSY4of0uAV15Tj3OAcvKp4rtcB</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="valider">Valider</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="suivant">Suivant</string>
    <string name="photo">Photo</string>
    <string name="birthdate">Birthdate</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="gender">Sexe</string>
    <string name="pr_ference">Préference</string>
    <string name="biographie">Biographie</string>
    <string name="LoginActivity_password_hint">Mot de passe</string>
    <string name="LoginActivity_email_hint">Email</string>
    <string name="inscription">Inscription</string>
    <string name="custom_dialog_message">Vous avez un match avec:</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="home_activity_no_users_found">Aucun profil vous correspondant n\'a été trouvé</string>
    <string name="activity_my_profil_edit_email_edit_text">Email</string>
    <string name="activity_my_profil_edit_username_edit_text">Username</string>
    <string name="activity_my_profil_edit_password_edit_text">Password</string>
    <string name="activity_my_profil_preferences">Préférences</string>
    <string name="activity_my_profil_bio">Bio</string>
    <string name="activity_message_send_firebase_notification_title">Psssssst !</string>
    <string name="activity_message_send_firebase_notification_body">Tu as reçu un nouveau message</string>
    <string name="signup3_hobby_button_title">Preferences</string>
    <string name="activity_match_list_empty">Vous n\'avez pas encore de match</string>

    <string-array name="preferences">
        <item>Cinema</item>
        <item>Sports</item>
        <item>Video-Games</item>
        <item>Serie</item>
        <item>Manga</item>
    </string-array>
</resources>
