<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.Signup3Activity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/signup3GenderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/pr_ference"
        app:layout_constraintBottom_toTopOf="@id/photoButton"
        />

    <RadioGroup
        android:id="@+id/signup3radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/signup2Birthdate"

        >
        <RadioButton
            android:id="@+id/signup3radioButtonHomme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homme"
            />

        <RadioButton
            android:id="@+id/signup3radioButtonFemme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femme"
            />

        <RadioButton
            android:id="@+id/signup3radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/les_deux" />
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/biographie"/>

    <EditText
        android:id="@+id/signup3Bio"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"/>
    <Button
        android:id="@+id/signup2Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/valider"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toTopOf="@id/signup3Bio"/>

</LinearLayout>