<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup2Activity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/photoImgView"
        android:maxHeight="250dp"
        android:adjustViewBounds="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/photoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/photo"
        app:layout_constraintBottom_toTopOf="@id/photoImgView"
        />

    <TextView
        android:id="@+id/signup2BirthdateLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/date_de_naissance"
        app:layout_constraintBottom_toTopOf="@id/photoButton"
        />

    <EditText
        android:id="@+id/signup2Birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="false"
        app:layout_constraintBottom_toTopOf="@id/signup2BirthdateLabel"
        />
    <TextView
        android:id="@+id/signup2GenderLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/sexe"
        app:layout_constraintBottom_toTopOf="@id/signup2Birthdate"
        />

    <RadioGroup
        android:id="@+id/signup2radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/signup2GenderLabel"

        >
        <RadioButton
            android:id="@+id/radioButtonHomme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homme"
            />
        <RadioButton
            android:id="@+id/radioButtonFemme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femme"
            />
    </RadioGroup>
    <Button
        android:id="@+id/signup2Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/suivant"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toTopOf="@id/signup2radioGroup"/>

</LinearLayout>