<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.SignupActivity">

    <TextView
        android:id="@+id/signupMailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/adresse_mail" />

    <EditText
        android:id="@+id/signupMailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="nassim@hotmail.fr"
        app:layout_constraintBottom_toTopOf="@id/signupMailLabel" />

    <TextView
        android:id="@+id/signupUsernameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/nom_d_utilisateur"
        app:layout_constraintBottom_toTopOf="@id/signupMailEdit" />

    <EditText
        android:id="@+id/signupUsernameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="nassim"
        app:layout_constraintBottom_toTopOf="@id/signupUsernameLabel" />

    <TextView
        android:id="@+id/signupPasswordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/mot_de_passe"
        app:layout_constraintBottom_toTopOf="@id/signupUsernameEdit" />

    <EditText
        android:id="@+id/signupPasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:text="nassim"
        app:layout_constraintBottom_toTopOf="@id/signupPasswordEdit" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/suivant"
        app:layout_constraintBottom_toTopOf="@id/signupPasswordEdit" />

</LinearLayout>