<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/loginMailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/adresse_mail"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="250dp"
        android:layout_marginRight="20dp"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginMailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:hint="Email"
            app:layout_constraintBottom_toTopOf="@id/loginMailLabel"
            />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/loginPasswordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mot_de_passe"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toTopOf="@id/loginMailEdit"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:hint="Mot de passe"
            app:layout_constraintBottom_toTopOf="@id/loginPasswordEdit"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/valider"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toTopOf="@id/loginPasswordEdit"/>

</LinearLayout>